# Colon-ITIS

colon/: README.md  colon.cabal
colon/src/: Arithmetic.hs  ControlFlow.hs  Graphics.hs  GraphicsState.hs  IO.hs  Interpreter.hs  Main.hs  Memory.hs  Parser.hs  Stack.hs  TestInterpreter.hs
