name:                ColonInterpreter
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ColonInterpreter
  main-is:             Main.hs
  other-modules:       Stack, Arithmetic, Memory, IO, Parser, GraphicsState, Graphics
  build-depends:       base >=4.14, containers, mtl >= 2.2, HUnit, gloss, stm
  hs-source-dirs:      src
  default-language:    Haskell2010